--- a/src/appointmentmanagementsystem/LoginPage.form
+++ b/src/appointmentmanagementsystem/LoginPage.form
@@ -190,7 +190,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="dont have account? signup"/>
+            <Property name="text" type="java.lang.String" value="dont have an account? signup"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="null"/>
             </Property>
